# md-tmpl

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md  SPEC.md  justfile  package-lock.json  rust-toolchain.toml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: comparison.rs
benchmarks/examples/: perf_test.rs  verify_output.rs
benchmarks/python/: bench_templates.py  requirements.txt
benchmarks/scripts/: parse_benchmarks.py  run_and_update.py  update_tables.py
benchmarks/templates/: mega_macro.tmpl.md
crates/md-tmpl/: Cargo.toml  README.md  build.rs
crates/md-tmpl-compile-tests/: Cargo.toml  build.rs
crates/md-tmpl-compile-tests/src/: lib.rs
crates/md-tmpl-core/: Cargo.toml
crates/md-tmpl-core/src/: cache.rs  compat.rs  consts.rs  context.rs  error.rs  filter.rs  include.rs  include_core.rs  lib.rs  parser.rs  scope.rs  scope_tests.rs  serde_support.rs  types.rs  types_tests.rs  value.rs
crates/md-tmpl-core/src/cache/: tests.rs
crates/md-tmpl-core/src/compiled/: analysis.rs  blockquote.rs  mod.rs  render.rs  render_tests.rs  tests.rs  tests_analysis.rs  type_check.rs  type_check_tests.rs  type_resolve.rs
crates/md-tmpl-core/src/frontmatter/: imports.rs  mod.rs  params.rs  params_tests.rs  tests.rs  type_aliases.rs  validation.rs
crates/md-tmpl-core/src/template/: adversarial_tests.rs  analysis.rs  collision_and_scope_tests.rs  doc_example_tests.rs  higher_order_tests.rs  mod.rs  render_integration_tests.rs  render_methods.rs  shared_tests.rs  tests.rs
crates/md-tmpl-core/tests/: conformance.rs
crates/md-tmpl-ffi/: Cargo.toml
crates/md-tmpl-ffi/include/: md_tmpl.h
crates/md-tmpl-ffi/src/: cache.rs  context.rs  json.rs  lib.rs  metadata.rs  render.rs  template.rs  tests.rs
crates/md-tmpl-macros/: Cargo.toml  README.md
crates/md-tmpl-macros/prompts/: code_review.tmpl.md  cross_crate_complex.tmpl.md  filter_test.tmpl.md  greeting.tmpl.md  simple_greeting.tmpl.md  type_library.tmpl.md
crates/md-tmpl-macros/src/: codegen.rs  compile.rs  lib.rs  struct_gen.rs  type_gen.rs
crates/md-tmpl-macros/tests/: cross_crate_integration.rs  macros_integration.rs  typed_builder_integration.rs
crates/md-tmpl-python/: Cargo.toml  README.md  pyproject.toml
crates/md-tmpl-python/python/md_tmpl/: __init__.py  __init__.pyi  _exceptions.py  _import_hook.py  _md_tmpl.pyi  _template_helper.py  _variants.py
crates/md-tmpl-python/python/tests/: test_adv_m3_phase2.py  test_conformance.py  test_md_tmpl.py
crates/md-tmpl-python/src/: convert.rs  errors.rs  lib.rs  pyclass_builder.rs  template.rs  typegen.rs
crates/md-tmpl-wasm/: Cargo.toml  README.md  package-lock.json  package.json
crates/md-tmpl-wasm/benchmarks/: bench.mjs  bench.ts  tsconfig.json
crates/md-tmpl-wasm/src/: lib.rs
crates/md-tmpl-wasm/tests/: adv_m3_phase2.test.ts  correctness.ts  shared_tests.test.ts  wasm.test.ts
crates/md-tmpl/benches/: template_bench.rs
crates/md-tmpl/prompts/: code_review.tmpl.md  cross_crate_complex.tmpl.md  env_typed.tmpl.md  greeting.tmpl.md  option_test.tmpl.md  role_consumer.tmpl.md  roles_lib.tmpl.md
crates/md-tmpl/src/: cache.rs  consts.rs  context.rs  error.rs  include.rs  include_core.rs  inline_template_tests.rs  lib.rs  scope.rs  scope_tests.rs  serde_support.rs  serde_support_tests.rs  types.rs  value.rs
crates/md-tmpl/src/compiled/: analysis.rs  inline.rs  mod.rs  render.rs  tests.rs  tests_analysis.rs  type_check.rs  type_check_tests.rs
crates/md-tmpl/src/frontmatter/: imports.rs  mod.rs  params.rs  validation.rs
crates/md-tmpl/src/template/: analysis.rs  higher_order_tests.rs  mod.rs  render_integration_tests.rs  render_methods.rs  shared_tests.rs  tests.rs
crates/md-tmpl/tests/: adv_m1_tests.rs  adv_m2_tests.rs  adv_m3_phase2_tests.rs  cross_crate_integration.rs  doc_examples.rs  macros_integration.rs  no_std_compat.rs  reexport_macros.rs  shared_compile_time.rs  yaml_conformance.rs  yaml_cross_validation.rs
crates/prompt-templates/: Cargo.toml  README.md
crates/prompt-templates-ffi/: Cargo.toml
crates/prompt-templates-ffi/include/: prompt_templates.h
crates/prompt-templates-ffi/src/: lib.rs
crates/prompt-templates-macros/: Cargo.toml  README.md
crates/prompt-templates-macros/prompts/: bug_report.tmpl.md  code_review.tmpl.md  cross_crate_complex.tmpl.md  filter_test.tmpl.md  greeting.tmpl.md  option_test.tmpl.md  simple_greeting.tmpl.md  task_report.tmpl.md  type_library.tmpl.md
crates/prompt-templates-macros/src/: codegen.rs  compile.rs  lib.rs  struct_gen.rs  type_gen.rs
crates/prompt-templates-macros/tests/: cross_crate_integration.rs  macros_integration.rs  typed_builder_integration.rs
crates/prompt-templates-python/: Cargo.toml  README.md  pyproject.toml
crates/prompt-templates-python/python/prompt_templates/: __init__.py  __init__.pyi  _exceptions.py  _import_hook.py  _template_helper.py  _variants.py
crates/prompt-templates-python/python/tests/: test_prompt_templates.py
crates/prompt-templates-python/src/: convert.rs  errors.rs  lib.rs  pyclass_builder.rs  template.rs  typegen.rs
crates/prompt-templates-wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
crates/prompt-templates-wasm/benchmarks/: bench.mjs
crates/prompt-templates-wasm/src/: lib.rs
crates/prompt-templates-wasm/tests/: correctness.ts  wasm.test.ts
crates/prompt-templates/benches/: template_bench.rs
crates/prompt-templates/prompts/: bug_report.tmpl.md  code_review.tmpl.md  cross_crate_complex.tmpl.md  greeting.tmpl.md  simple_greeting.tmpl.md  task_report.tmpl.md  type_library.tmpl.md
crates/prompt-templates/src/: cache.rs  compat.rs  consts.rs  context.rs  error.rs  filter.rs  frontmatter.rs  include.rs  include_core.rs  inline_template_tests.rs  lib.rs  parser.rs  scope.rs  serde_support.rs  types.rs  value.rs
crates/prompt-templates/tests/: adv_m1_tests.rs  cross_crate_integration.rs  macros_integration.rs  no_std_compat.rs  typed_builder_integration.rs  yaml_conformance.rs  yaml_cross_validation.rs
(+268 files in other folders)
