[workspace]
members = [
  "crates/prompt-templates",
  "crates/prompt-templates-macros",
  "crates/prompt-templates-python",
  "crates/prompt-templates-ffi",
  "crates/prompt-templates-wasm",
]
resolver = "3"

[workspace.dependencies]
typed-builder = "0.23"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
implicit_hasher = "allow"

[workspace.lints.rust]
warnings = "deny"
