[workspace]
members = [
  "crates/md-tmpl",
  "crates/md-tmpl-core",
  "crates/md-tmpl-macros",
  "crates/md-tmpl-python",
  "crates/md-tmpl-ffi",
  "crates/md-tmpl-wasm",
  "crates/md-tmpl-compile-tests",
]
resolver = "3"

[workspace.dependencies]
typed-builder = "0.23"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
implicit_hasher = "allow"

[workspace.lints.rust]
warnings = "deny"
