[package]
name = "md-tmpl-core"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "Core template engine for md-tmpl — parsing, compilation, and rendering"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/md-tmpl"
keywords = ["template", "prompt", "markdown", "llm", "agent"]
categories = ["template-engine", "text-processing"]

[features]
default = ["std", "serde", "cbor", "flexbuffers"]
std = ["hashbrown/default", "thiserror/std", "ciborium?/std"]
serde = ["dep:serde", "hashbrown/serde"]
# CBOR (de)serialization via ciborium — `no_std` compatible.
cbor = ["serde", "dep:ciborium"]
# FlexBuffers deserialization — requires `std` (flexbuffers has no `no_std`).
flexbuffers = ["std", "serde", "dep:flexbuffers"]

[dependencies]
thiserror = { version = "2", default-features = false }
hashbrown = { version = "0.17", default-features = false, features = [
  "allocator-api2",
  "default-hasher",
] }
itoa = { version = "1", default-features = false }
# Non-optional: re-exported from `__private` so generated param structs always
# get a `TypedBuilder` derive without downstream crates depending on it directly.
typed-builder = { workspace = true }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
], optional = true }
flexbuffers = { version = "25.12", optional = true }
spin = { version = "0.12", default-features = false, features = ["lazy"] }
ciborium = { version = "0.2.2", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
flexbuffers = "25.12"

[[test]]
name = "conformance"
required-features = ["std", "serde"]

[lints]
workspace = true
