[package]
name = "md-tmpl-ffi"
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
description = "C FFI bindings for md-tmpl, used by Go (and other) language bindings"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
md-tmpl = { version = "0.6.2", path = "../md-tmpl", features = [
  "std",
  "serde",
] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
flexbuffers = "25.12"
serde = { version = "1", features = ["derive"] }
