[package]
name = "md-tmpl-ffi"
version = "0.9.2"
edition = "2024"
rust-version = "1.85"
description = "C FFI bindings for md-tmpl, used by Go (and other) language bindings"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
md-tmpl = { version = "0.9.2", path = "../md-tmpl", default-features = false, features = [
  "std",
  "serde",
  "flexbuffers",
] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
flexbuffers = "25.12"
serde = { version = "1", features = ["derive"] }
