[package]
name = "md-tmpl-macros"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for build-time template validation and pre-parsing"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/md-tmpl"
readme = "README.md"
keywords = ["template", "proc-macro", "prompt", "llm", "compile-time"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = ["serde", "typed-builder"]
serde = []
typed-builder = []

[dependencies]
md-tmpl-core = { version = "0.5.2", path = "../md-tmpl-core", default-features = false, features = [
  "std",
  "serde",
  "typed-builder",
] }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
typed-builder = { workspace = true }

[lints]
workspace = true
