[package]
name = "md-tmpl-python"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Strongly-typed template engine for LLM prompts (Python package)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/md-tmpl"
readme = "README.md"
keywords = ["template", "python", "pyo3", "llm", "prompt"]
categories = ["api-bindings"]
publish = false

[lib]
name = "_md_tmpl"
crate-type = ["cdylib"]

[dependencies]
md-tmpl = { path = "../md-tmpl", features = ["serde"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
serde_json = "1"

[lints]
workspace = true
