[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "md-tmpl"
version = "0.5.0"
description = "Strongly-typed template engine for LLM prompts"
license = { text = "Apache-2.0 OR MIT" }
requires-python = ">=3.10"
dependencies = ["flatbuffers>=25.12"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Markup",
  "Typing :: Typed",
]
keywords = ["template", "prompt", "llm", "ai", "typed"]

[project.urls]
Homepage = "https://github.com/domenukk/md-tmpl"
Repository = "https://github.com/domenukk/md-tmpl"
Documentation = "https://github.com/domenukk/md-tmpl/blob/main/crates/md-tmpl-python/README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "md_tmpl._md_tmpl"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
