[package]
name = "md-tmpl-wasm"
version = "0.9.2"
edition = "2024"
rust-version = "1.85"
description = "WebAssembly bindings for md-tmpl"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/md-tmpl"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
md-tmpl = { version = "0.9.2", path = "../md-tmpl", default-features = false, features = [
  "std",
  "serde",
  "flexbuffers",
] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[lints]
workspace = true
