[package]
name = "md-tmpl"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
description = "Lightweight template engine for .tmpl.md prompt files with typed frontmatter"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/md-tmpl"
readme = "README.md"
keywords = ["template", "prompt", "markdown", "llm", "agent"]
categories = ["template-engine", "text-processing"]

[features]
default = ["std", "serde", "typed-builder", "macros"]
std = ["md-tmpl-core/std"]
serde = ["md-tmpl-core/serde"]
typed-builder = ["md-tmpl-core/typed-builder"]
# Re-export proc macros so users can write `md_tmpl::include_template!`
# instead of importing `md_tmpl_macros` separately.
macros = ["dep:md-tmpl-macros"]

[dependencies]
md-tmpl-core = { version = "0.5.2", path = "../md-tmpl-core", default-features = false }
md-tmpl-macros = { version = "0.5.2", path = "../md-tmpl-macros", optional = true, features = [
  "serde",
  "typed-builder",
] }

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
typed-builder = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
flexbuffers = "25.12"
toml = "0.8"

[[test]]
name = "yaml_conformance"
required-features = ["std"]

[[test]]
name = "adv_m1_tests"
required-features = ["std"]

[[bench]]
name = "template_bench"
harness = false
required-features = ["std"]

[lints]
workspace = true
