[package]
name = "prompt-templates-ffi"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "C FFI bindings for prompt-templates, used by Go (and other) language bindings"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
prompt-templates = { path = "../prompt-templates", features = ["std", "serde"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
flexbuffers = "25.12"
serde = { version = "1", features = ["derive"] }
