[package]
name = "prompt-templates-macros"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for compile-time template validation and pre-parsing"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/prompt-templates"
readme = "README.md"
keywords = ["template", "proc-macro", "prompt", "llm", "compile-time"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = []
# These feature flags are intentionally empty — they control *code generation*,
# not dependency activation.  When a user enables `serde` on this crate, the
# proc-macros emit `#[derive(Serialize, Deserialize)]` on generated structs and
# enums (using `cfg!(feature = "serde")` at macro-expansion time).  The actual
# `serde` dependency lives in the user's crate, not here.
#
# Similarly, `typed-builder` causes the macros to emit
# `#[derive(TypedBuilder)]` and builder-related field attributes on generated
# structs.
serde = []
typed-builder = []

[dependencies]
prompt-templates = { version = "0.1", path = "../prompt-templates" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
prompt-templates = { path = "../prompt-templates", features = [
  "serde",
  "typed-builder",
] }
serde = { version = "1", features = ["derive"] }
typed-builder = { workspace = true }

[lints]
workspace = true
