[package]
name = "prompt-templates-macros"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for compile-time template validation and pre-parsing"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/prompt-templates"
readme = "README.md"
keywords = ["template", "proc-macro", "prompt", "llm", "compile-time"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = ["serde", "typed-builder"]
# These feature flags are intentionally minimal — they control *code generation*,
# not dependency activation.  When enabled, the proc-macros emit
# `#[derive(Serialize, Deserialize)]` and `#[derive(TypedBuilder)]` on generated
# structs and enums (using `cfg!(feature = ...)` at macro-expansion time).
# The actual `serde`/`typed-builder` dependencies live in the user's crate.
serde = []
typed-builder = []

[dependencies]
prompt-templates = { version = "0.2", path = "../prompt-templates" }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
prompt-templates = { path = "../prompt-templates", features = [
  "serde",
  "typed-builder",
] }
serde = { version = "1", features = ["derive"] }
typed-builder = { workspace = true }

[lints]
workspace = true
