[package]
name = "prompt-templates-python"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Strongly-typed template engine for LLM prompts (Python package)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/prompt-templates"
readme = "README.md"
keywords = ["template", "python", "pyo3", "llm", "prompt"]
categories = ["api-bindings"]
publish = false

[lib]
name = "_prompt_templates"
crate-type = ["cdylib"]

[dependencies]
prompt-templates = { path = "../prompt-templates", features = ["serde"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
serde_json = "1"

[lints]
workspace = true
